--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,11 @@
                 <li><a href="/values">Our <span>Core Values</span></a></li>
                 <li><a href="/services"> Industries <span>We Serve</span></a></li>
             </ul>
+            <div class="hamburger-btn">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </nav>
     </header>
     <main>
