--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,13 +29,13 @@ nav {
   top: 0;
   text-align: center;
   padding: 1rem;
-  z-index:30;  
-  transition:background-color 1s;
+  z-index: 30;
+  transition: background-color 1s;
 }
-nav.scrolling{
-    background-color: skyblue;
+nav.scrolling {
+  background-color: skyblue;
 }
-@media screen and (min-width:1000px) {
+@media screen and (min-width: 1000px) {
   nav {
     padding-right: 15%;
   }
@@ -46,7 +46,7 @@ nav a {
 }
 nav .logo {
   font-size: 1.3rem;
-  z-index:inherit;
+  z-index: inherit;
 }
 
 nav .logo span {
@@ -64,6 +64,22 @@ nav .links span {
 }
 nav .links a {
   font-size: 1.2rem;
+  position:relative;
+}
+nav .links a::after{
+    content:"";
+    width:100%;
+    position:absolute;
+    bottom:-10%;
+    left:0;
+    height:2px;
+    background-color: var(--paleLinkBlue);
+    transform:scaleX(0);
+    transform-origin: left;
+    transition:0.5s ease;
+}
+nav .links li:hover a::after{
+    transform:scaleX(1);
 }
 nav .hamburger-btn {
   width: 3rem;
@@ -74,23 +90,23 @@ nav .hamburger-btn {
   place-items: center;
   cursor: pointer;
   display: none;
-  z-index:25;
+  z-index: 25;
 }
-nav .hamburger-btn.open{
-    border:none;
+nav .hamburger-btn.open {
+  border: none;
 }
 
 nav .hamburger-btn div {
-    width: 2rem;
-    height: 1px;
-    background: var(--white);
-    position: relative;
-    transition: transform 1s, bottom 1s, opacity 1s;
+  width: 2rem;
+  height: 1px;
+  background: var(--white);
+  position: relative;
+  transition: transform 1s, bottom 1s, opacity 1s;
 }
 
 nav .hamburger-btn.open div {
-    /* background-color: black; */
-    width: 2rem;
+  /* background-color: black; */
+  width: 2rem;
 }
 nav .hamburger-btn.open div:nth-of-type(1) {
   transform: rotate(-45deg);
@@ -110,34 +126,33 @@ nav .hamburger-btn.open div:nth-of-type(3) {
     padding-right: 0;
     padding-inline: 5%;
   }
-  nav .logo{
-    font-size:1rem;
+  nav .logo {
+    font-size: 1rem;
   }
   nav .links {
     position: fixed;
     flex-direction: column;
     top: 0;
-    background-image:linear-gradient(to bottom right,skyblue 70%,white );
+    background-image: linear-gradient(to bottom right, skyblue 60%, white);
     width: 100%;
     height: 100%;
     left: 0;
-    z-index:20;
     padding-top: 10rem;
     justify-content: start;
-    gap:2rem;
-    transform:scale(0);
+    gap: 2rem;
     text-align: left;
-    padding-inline:5%;
-    opacity:0;
-    transition:opacity 0.5s, gap 1s;
-    border-radius: 50%;
-    /* transform: translate(-50%, -50%); */
+    padding-inline: 5%;
+    visibility:hidden;
+    opacity: 0;
+    transition: visibility 1s,opacity 0.5s, gap 1s;
   }
-  nav .links.open{
-    transform:scale(1);
-    opacity:1;
+  nav .links.open {
+    /* transform:scale(1); */
+    visibility:visible;
+    opacity: 1;
     border-radius: 0;
     gap: 5rem;
+    z-index: 20;
   }
   nav .hamburger-btn {
     display: grid;
@@ -178,7 +193,7 @@ nav .hamburger-btn.open div:nth-of-type(3) {
     width: 45%;
   }
 }
-.hero-section h1::after {
+.hero-section h1::before {
   content: "";
   position: absolute;
   top: 0;
@@ -188,8 +203,22 @@ nav .hamburger-btn.open div:nth-of-type(3) {
   border: 2px solid var(--white);
   border-bottom: none;
   border-right: none;
+  animation-name: slide-from-left;
+  animation-duration:0.5s;
+  animation-timing-function:ease;
+  
 }
-.hero-section h1::before {
+@keyframes slide-from-left{
+    from{
+        opacity:0;
+        left:-30%;
+    }
+    to{
+        opacity:1;
+        left:0;
+    }
+}
+.hero-section h1::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -199,10 +228,25 @@ nav .hamburger-btn.open div:nth-of-type(3) {
   border: 2px solid var(--white);
   border-top: none;
   border-left: none;
+  animation-name: slide-from-right;
+  animation-duration:0.5s;
+  animation-timing-function:ease;
+  
 }
+@keyframes slide-from-right{
+    from{
+        opacity:0;
+        right:-30%;
+    }
+    to{
+        opacity:1;
+        right:0;
+    }
+}
+
 /* Hero section end */
 
-/* Hero main section start */
+/* Home page main section start */
 .home-main-section {
   padding-left: 8%;
   padding-right: 12%;
@@ -223,6 +267,11 @@ nav .hamburger-btn.open div:nth-of-type(3) {
   margin: auto;
   gap: 3rem;
   flex-wrap: wrap;
+}
+@media screen and (max-width: 386px) {
+  .home-main-section .container {
+    flex-direction: column;
+  }
 }
 .home-main-section .container .agenda-card {
   display: grid;
@@ -267,7 +316,7 @@ nav .hamburger-btn.open div:nth-of-type(3) {
   margin: 0;
   padding: 0;
 }
-/* Hero main section end*/
+/* Home page main section end*/
 
 /* Footer start */
 footer {
@@ -276,7 +325,7 @@ footer {
 }
 footer h3 {
   font-size: 1.8rem;
-  font-weight:400;
+  font-weight: 400;
   color: var(--white);
   margin-bottom: 1.5rem;
 }
