new file:   static/css/about_style.css 	modified:   templates/base.html cut the hero section from here 	modified:   templates/index.html pasted the hero section here

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,11 @@
 {%extends "base.html"%}
 {%block title%}Home &mdash; Bluspan {% endblock %}
 {%block main_content%}
+<section class="hero-section">
+    <h1>
+        Bluspan Professional Services
+    </h1>
+</section>
 <section class="home-main-section">
     <h3>Our <span>Agenda</span></h3>
     <div class="container">
