--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,5 +1,32 @@
 {%extends "base.html"%}
 {%block title%}About us &mdash; Bluspan {% endblock %}
 {%block main_content%}
+<link rel="stylesheet" href="/static/css/about_style.css">
 
+<section class="hero-section">
+    <h1>
+        About us and our services
+    </h1>
+</section>
+<section class="about-us-main-section">
+    <h2>Brief <span style="color: #165C80;font-weight: 300;">introduction</span></h2>
+<article>
+<p>
+<span style="color: #018FFF; font-weight: 500;">Bluspan</span>  Professional Services <span style="color: #018FFF;">"Bluspan"</span> 
+is a professional Tax, Regulatory and People Services firm <br>
+with a Global network that serves both local and multinational companies. <br>
+We specialize in providing tax solutions to all types of businesses stretching from conception <br>
+to execution, including a robust and maintainable tax audit defense, strategically designed to <br>
+curtail tax liabilities to the barest minimum.  <br>
+Our regulatory solutions are premised on tested and proven knowledge of the regulatory horizon. <br>
+We focus on developing our people for the future. <br>
+Our practice in the short run focuses on serving the Sub-Saharan African Region with potentials <br>
+to grow into an African and global business covering Europe, Middle East and the Americas <br>
+</p>
+</article>
+<div class="blue-building"></div>
+
+
+
+</section>
 {% endblock %}
