--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,22 +64,22 @@ nav .links span {
 }
 nav .links a {
   font-size: 1.2rem;
-  position:relative;
+  position: relative;
 }
-nav .links a::after{
-    content:"";
-    width:100%;
-    position:absolute;
-    bottom:-10%;
-    left:0;
-    height:2px;
-    background-color: var(--paleLinkBlue);
-    transform:scaleX(0);
-    transform-origin: left;
-    transition:0.5s ease;
+nav .links a::after {
+  content: "";
+  width: 100%;
+  position: absolute;
+  bottom: -10%;
+  left: 0;
+  height: 2px;
+  background-color: var(--paleLinkBlue);
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: 0.5s ease;
 }
-nav .links li:hover a::after{
-    transform:scaleX(1);
+nav .links li:hover a::after {
+  transform: scaleX(1);
 }
 nav .hamburger-btn {
   width: 3rem;
@@ -142,13 +142,13 @@ nav .hamburger-btn.open div:nth-of-type(3) {
     gap: 2rem;
     text-align: left;
     padding-inline: 5%;
-    visibility:hidden;
+    visibility: hidden;
     opacity: 0;
-    transition: visibility 1s,opacity 0.5s, gap 1s;
+    transition: visibility 1s, opacity 0.5s, gap 1s;
   }
   nav .links.open {
     /* transform:scale(1); */
-    visibility:visible;
+    visibility: visible;
     opacity: 1;
     border-radius: 0;
     gap: 5rem;
@@ -204,19 +204,21 @@ nav .hamburger-btn.open div:nth-of-type(3) {
   border-bottom: none;
   border-right: none;
   animation-name: slide-from-left;
-  animation-duration:0.5s;
-  animation-timing-function:ease;
-  
+  animation-duration: 1.5s;
+  animation-timing-function: ease;
 }
-@keyframes slide-from-left{
-    from{
-        opacity:0;
-        left:-30%;
-    }
-    to{
-        opacity:1;
-        left:0;
-    }
+@keyframes slide-from-left {
+  from {
+    transform: scale(0);
+    transform-origin: top left;
+    opacity: 0;
+    left: -30%;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+    left: 0;
+  }
 }
 .hero-section h1::after {
   content: "";
@@ -229,19 +231,21 @@ nav .hamburger-btn.open div:nth-of-type(3) {
   border-top: none;
   border-left: none;
   animation-name: slide-from-right;
-  animation-duration:0.5s;
-  animation-timing-function:ease;
-  
+  animation-duration: 1.5s;
+  animation-timing-function: ease;
 }
-@keyframes slide-from-right{
-    from{
-        opacity:0;
-        right:-30%;
-    }
-    to{
-        opacity:1;
-        right:0;
-    }
+@keyframes slide-from-right {
+  from {
+    transform: scale(0);
+    transform-origin: bottom right;
+    opacity: 0;
+    right: -30%;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+    right: 0;
+  }
 }
 
 /* Hero section end */
