--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    {%block styleSheet%}{% endblock %}
     <title>{% block title %}{% endblock %}</title>
 </head>
 
@@ -22,7 +23,7 @@
             <ul class="links">
                 <li><a href="/about">About <span>us</span></a></li>
                 <li><a href="/values">Our <span>Core Values</span></a></li>
-                <li><a href="/services"> Industries <span>We Serve</span></a></li>
+                <li><a href="/industries-we-serve"> Industries <span>We Serve</span></a></li>
             </ul>
             <div class="hamburger-btn">
                 <div></div>
@@ -33,7 +34,7 @@
     </header>
     <section class="hero-section">
         <h1>
-            Bluspan Professional Services
+           {%block hero_text%} {% endblock %}
         </h1>
     </section>
     <main>
