--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 {%extends "base.html"%}
 {%block title%}Home &mdash; Bluspan {% endblock %}
+{%block hero_text%}Bluspan Professional Services{%endblock%}
+
 {%block main_content%}
 <section class="home-main-section">
     <h3>Our <span>Agenda</span></h3>
@@ -20,13 +22,13 @@
                 Our team
             </p>
         </div>
-        
+
         <div class="agenda-card">
             <div class="card-image">
                 03
             </div>
             <p class="card-title">
-               Problems & solution
+                Problems & solution
             </p>
         </div>
         <div class="agenda-card">
@@ -40,5 +42,3 @@
     </div>
 </section>
 {%endblock%}
-
-
