--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,11 @@ html {
 body {
   font-family: "Roboto", sans-serif;
 }
+@media screen and (max-width:800px){
+    body.no-scroll{
+        overflow-y: hidden;
+    }
+}
 /* Navbar start */
 nav {
   display: flex;
@@ -294,25 +299,20 @@ nav .hamburger-btn.open div:nth-of-type(3) {
   color: var(--white);
   font-weight: 300;
 }
-.home-main-section .container .agenda-card:nth-of-type(1) .card-image 
-{
+.home-main-section .container .agenda-card:nth-of-type(1) .card-image {
   background-color: #6fd1d1;
 }
-.home-main-section .container .agenda-card:nth-of-type(2) .card-image 
-{
+.home-main-section .container .agenda-card:nth-of-type(2) .card-image {
   background-color: #1bb8d7;
 }
-.home-main-section .container .agenda-card:nth-of-type(3) .card-image 
-{
+.home-main-section .container .agenda-card:nth-of-type(3) .card-image {
   background-color: #018fff;
 }
-.home-main-section .container .agenda-card:nth-of-type(4) .card-image 
-{
+.home-main-section .container .agenda-card:nth-of-type(4) .card-image {
   background-color: #165c80;
   justify-self: center;
 }
-.home-main-section .container .agenda-card .card-image::after 
-{
+.home-main-section .container .agenda-card .card-image::after {
   content: "";
   position: absolute;
   width: 150%;
