--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -9,6 +9,7 @@
     </h1>
 </section>
 <section class="about-us-main-section">
+    <diV class="container">
     <h2>Brief <span style="color: #165C80;font-weight: 300;">introduction</span></h2>
 <article>
 <p>
@@ -25,7 +26,7 @@ to grow into an African and global business covering Europe, Middle East and the
 </p>
 </article>
 <div class="blue-building"></div>
-
+</diV>
 
 
 </section>
