--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,13 +1,11 @@
 {%extends "base.html"%}
 {%block title%}About us &mdash; Bluspan {% endblock %}
+{%block hero_text%}About us and our services{%endblock%}
 {%block main_content%}
+
 <link rel="stylesheet" href="/static/css/about_style.css">
 
-<section class="hero-section">
-    <h1>
-        About us and our services
-    </h1>
-</section>
+
 <section class="about-us-main-section">
     <diV class="container">
     <h2>Brief <span style="color: #165C80;font-weight: 300;">introduction</span></h2>
