--- a/templates/index.html
+++ b/templates/index.html
@@ -7,39 +7,53 @@
 <section class="home-main-section">
     <h3>Our <span>Agenda</span></h3>
     <div class="container">
-        <div class="agenda-card">
-            <div class="card-image">
-                01
+        <a href="/#" id="company-introduction"> 
+            <div class="agenda-card">
+                
+                <div class="card-image">
+                    01
+                </div>
+                <p class="card-title">
+                    Company introduction
+                </p>
             </div>
-            <p class="card-title">
-                Company introduction
-            </p>
-        </div>
-        <div class="agenda-card">
-            <div class="card-image">
-                02
-            </div>
-            <p class="card-title">
-                Our team
-            </p>
-        </div>
+        </a>
 
-        <div class="agenda-card">
-            <div class="card-image">
-                03
+        <a href="/#" id="team">
+
+            <div class="agenda-card">
+                <div class="card-image">
+                    02
+                </div>
+                <p class="card-title">
+                    Our team
+                </p>
             </div>
-            <p class="card-title">
-                Problems & solution
-            </p>
-        </div>
-        <div class="agenda-card">
-            <div class="card-image">
-                04
+        </a>
+
+        <a href="/#" id="Problems">
+
+            <div class="agenda-card">
+                <div class="card-image">
+                    03
+                </div>
+                <p class="card-title">
+                    Problems & solution
+                </p>
             </div>
-            <p class="card-title">
-                Services
-            </p>
+        </a>
+
+        <a href="/#" id="Services">
+
+            <div class="agenda-card">
+                <div class="card-image">
+                    04
+                </div>
+                <p class="card-title">
+                    Services
+                </p>
+            </div>
+        </a>
         </div>
-    </div>
 </section>
 {%endblock%}
