--- a/static/css/about_style.css
+++ b/static/css/about_style.css
@@ -6,7 +6,14 @@
     .about-us-main-section .container .content{
         display: flexbox;
     }
-
+    .about-us-main-section .container .content .blue-building{
+        position: relative;
+    
+     
+     
+       width: 100%;
+        
+    }
 }
 .about-us-main-section
 {
@@ -24,6 +31,12 @@ line-height: 1.5rem;
     .about-us-main-section .container .content{
         display: flex;
     }
+    .about-us-main-section .container .content .blue-building
+    {
+        position: relative;     
+       width: 40%;
+        
+    }
 }
 
 .about-us-main-section h2
@@ -37,19 +50,10 @@ line-height: 1.5rem;
 }
 .about-us-main-section article
 {
-    
-
-
+    padding-right: 5rem;
    margin-bottom: 5rem;
 }
-.about-us-main-section .container .content .blue-building{
-    position: relative;
 
- 
- 
-   width: 100%;
-    
-}
 .about-us-main-section .container .content .blue-building img{
     width: 100%;
 }
