--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,9 +1,11 @@
 {%extends "base.html"%}
 {%block title%}About us &mdash; Bluspan {% endblock %}
+{%block styleSheet%}<link rel="stylesheet" href="/static/css/about_style.css">{% endblock %}
 {%block hero_text%}About us and our services{%endblock%}
+
 {%block main_content%}
 
-<link rel="stylesheet" href="/static/css/about_style.css">
+
 
 
 <section class="about-us-main-section">
@@ -30,8 +32,36 @@
             <img src="/static/assests/imgs/blue building.jpg" alt="blue-building">
         </div>
     </diV>
+    <h2 id="sub"> <span style="color: black;">Our</span> Vision and Mission</h2>
+    <div class="vision">
+        <img src="/static/assests/imgs/vision.svg" alt="vision">
+        <article>
+            <h2>Vision</h2>
+            <p>Our mission is to <span style="color: #165C80;"> provide unrivalled consulting, 
+                tax and financial services to all our clients.</span>
+                </p>
+        </article>
+
+    </div>
+    
+    <div class="mission">
+        <article>
+            <h2>Mission</h2>
+            <p>
+               <span style="color: #018FFF;;"> Our main objective</span> as a firm is to ensure maximum deliverables through providing exceptional financial products both in content, 
+                presentation and an underlying touch to client’s personal attention.
+            </p>
+            <p>
+                <span style="color: #018FFF;">We will pride ourselves as the ultimate destination for aspiring employees desiring to build an outstanding career in tax and financial services.</span>
+                Together, we will build and nurture a culture of excellence, growth, profitability and passion.
+            </p>
+        </article>
+        <img src="/static/assests/imgs/mission.svg" alt="mision">
+        
+    </div>
 </div>
 
 
 </section>
+
 {% endblock %}
