--- a/templates/values.html
+++ b/templates/values.html
@@ -1,7 +1,11 @@
 {%extends "base.html"%}
 {%block title%}industries-we-serve &mdash; Bluspan {% endblock %}
 {%block hero_text%}Our Core Values{%endblock%}
-
+{%block styleSheet%}<link rel="stylesheet" href="/static/css/values.css">{% endblock %}
 {%block main_content%}
-
+<section class="Values-main-section">
+    <div class="pic">
+        <img src="/static/assests/imgs/Group-45.svg" alt="ahh">
+    </div>
+</section>
 {%endblock%}
