Improved about us page and navbar

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,54 +1,53 @@
 {%extends "base.html"%}
 {%block title%}About us &mdash; Bluspan {% endblock %}
-{%block styleSheet%}<link rel="stylesheet" href="/static/css/about_style.css">{% endblock %}
+{%block styleSheet%}
+<link rel="stylesheet" href="/static/css/about_style.css">{% endblock %}
 {%block hero_text%}About us and our services{%endblock%}
 
 {%block main_content%}
 
-
-
-
 <section class="about-us-main-section">
+    <h2>Brief <span style="color: #165C80;">introduction</span></h2>
     <diV class="container">
-       
-    <h2>Brief <span style="color: #165C80;font-weight: 300;">introduction</span></h2>
-    <div class="content">
+        <article class="article-1">
 
-        <article>
-            <p>
-                <span style="color: #018FFF; font-weight: 500;">Bluspan</span>  Professional Services <span style="color: #018FFF;">"Bluspan"</span> 
-                is a professional Tax, Regulatory and People Services firm <br>
-                with a Global network that serves both local and multinational companies. <br>
-                We specialize in providing tax solutions to all types of businesses stretching from conception <br>
-                to execution, including a robust and maintainable tax audit defense, strategically designed to <br>
-                curtail tax liabilities to the barest minimum.  <br>
-                Our regulatory solutions are premised on tested and proven knowledge of the regulatory horizon. <br>
-                We focus on developing our people for the future. <br>
-                Our practice in the short run focuses on serving the Sub-Saharan African Region with potentials <br>
-                to grow into an African and global business covering Europe, Middle East and the Americas <br>
-            </p>
+            <span style="color: #018FFF; ">Bluspan</span> Professional Services <span style="color: #018FFF;">"Bluspan"</span>
+            is a professional Tax, Regulatory and People Services firm <br>
+            with a Global network that serves both local and multinational companies. <br>
+            We specialize in providing tax solutions to all types of businesses stretching from conception <br>
+            to execution, including a robust and maintainable tax audit defense, strategically designed to <br>
+            curtail tax liabilities to the barest minimum. <br>
+            Our regulatory solutions are premised on tested and proven knowledge of the regulatory horizon. <br>
+            We focus on developing our people for the future. <br>
+            Our practice in the short run focuses on serving the Sub-Saharan African Region with potentials <br>
+            to grow into an African and global business covering Europe, Middle East and the Americas <br>
+
         </article>
         <div class="blue-building">
             <img src="/static/assests/imgs/blue building.jpg" alt="blue-building">
         </div>
-    </diV>
-    <h2 id="sub"> <span style="color: black;">Our</span> Vision and Mission</h2>
-    <div class="vision">
-        <img src="/static/assests/imgs/vision.svg" alt="vision">
-        <article>
+
+        <h2 class="sub-heading"> Our <span>Vision & Mission</span> </h2>
+
+        <div class="vision-arrow">
+            <img src="/static/assests/imgs/vision.svg" alt="vision">
+        </div>
+        <div class="vision-no-arrow">
+            <img src="/static/assests/imgs/vision for smaller screens.svg" alt="vision">
+        </div>
+        <article class="article-2">
             <h2>Vision</h2>
-            <p>Our mission is to <span style="color: #165C80;"> provide unrivalled consulting, 
-                tax and financial services to all our clients.</span>
-                </p>
+            <p>Our mission is to <span style="color: #165C80;"> provide unrivalled consulting,
+                    tax and financial services to all our clients.</span>
+            </p>
         </article>
 
-    </div>
-    
-    <div class="mission">
-        <article>
+
+
+        <article class="article-3">
             <h2>Mission</h2>
             <p>
-               <span style="color: #018FFF;;"> Our main objective</span> as a firm is to ensure maximum deliverables through providing exceptional financial products both in content, 
+                <span style="color: #018FFF;;"> Our main objective</span> as a firm is to ensure maximum deliverables through providing exceptional financial products both in content,
                 presentation and an underlying touch to client’s personal attention.
             </p>
             <p>
@@ -56,10 +55,14 @@
                 Together, we will build and nurture a culture of excellence, growth, profitability and passion.
             </p>
         </article>
-        <img src="/static/assests/imgs/mission.svg" alt="mision">
-        
+        <div class="mission-arrow">
+            <img src="/static/assests/imgs/mission.svg" alt="mision">
+        </div>
+        <div class="mission-no-arrow">
+            <img src="/static/assests/imgs/mission for smaller screens.svg" alt="mision">
+        </div>
     </div>
-</div>
+
 
 
 </section>
