--- a/static/css/about_style.css
+++ b/static/css/about_style.css
@@ -1,126 +1,135 @@
-
 /* about us main section start*/
-
-@media screen and (max-width:800px) {
-
-    .about-us-main-section .container .content{
-        display: flexbox;
-    }
-    .about-us-main-section .container .content .blue-building{
-        position: relative;
-    
-     
-     
-       width: 100%;
-        
-    }
-}
-.about-us-main-section
-{
-    
-padding: 0.8rem;
-line-height: 1.5rem;
+.about-us-main-section {
+  padding-inline: 5%;
 }
 .about-us-main-section .container {
-    display: flexbox;
-    
+  margin: auto;
+  display: grid;
+  gap: 2rem;
+  place-items: center;
+  grid-template-columns: 1fr;
+  line-height: 1.5rem;
 }
-@media screen and (min-width:900px){
-    .about-us-main-section .container .content{
-        display: flex;
-    }
-    .about-us-main-section .container .content .blue-building
-    {
-        position: relative;     
-       width: 40%;
-        
-    }
+.about-us-main-section h2 {
+  margin-block: 2rem;
+  font-size: 2rem;
+  font-weight: 300;
 }
 
-.about-us-main-section h2
-
-{
-
-    font-weight: 400;
-    line-height: 36.7px;
-    padding-bottom: 2rem;
-    padding-top: 5.5rem;
+.blue-building {
+  width: 100%;
+  max-height: 400px;
+  order: 1;
 }
-.about-us-main-section article
-{
-    padding-right: 5rem;
-   margin-bottom: 5rem;
+.article-1 {
+  order: 2;
 }
-
-.about-us-main-section .container .content .blue-building img{
-    width: 100%;
+.blue-building img {
+  width: 100%;
+  max-height: inherit;
 }
-.about-us-main-section .container #sub{
-    font-weight: 300;
-    color: #018FFF;
-    padding-left: 20%;
-    padding-right: 10%;
+.sub-heading {
+  order: 3;
+  font-weight: 300;
+  font-size: 2rem;
+  justify-self: center;
 }
-.about-us-main-section .container .mission h2{
-    color: #018FFF;
-    font-weight: 300;
+.sub-heading span {
+  color: #018fff;
 }
-.about-us-main-section .container .vision h2{
-    color: #286D7B;
-    font-weight: 300;
+.vision-arrow {
+  display: none;
 }
-@media screen and (min-width:900px){
-.about-us-main-section .container  .vision{
-    padding: 4rem;
-    display: flex;
-
-
+.vision-no-arrow {
+  order: 4;
 }
-.about-us-main-section .container  .mission{
-    padding: 3rem;
-    display: flex;
-
+.article-2 {
+  order: 5;
 }
-
+.article-2 h2 {
+  margin-top: 0;
+  text-align: center;
+  margin-bottom: 2rem;
+  font-weight: 300;
+  color: #018fff;
+  font-size: 1.8rem;
 }
-@media screen and (max-width:900px) {
-    .about-us-main-section .container  .vision{
-        display: flex;
-        /* padding-left:3rem; */
-        
-    }
+.mission-arrow {
+  display: none;
+}
+.mission-no-arrow {
+  order: 6;
+}
+.article-3 {
+  order: 7;
+}
+.article-3 h2 {
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 2rem;
+  font-weight: 300;
+  color: #018fff;
+  font-size: 1.8rem;
+}
+@media screen and (min-width: 950px) {
+  .about-us-main-section .container {
+    gap: 2rem;
+    place-items: center;
+    grid-template-columns: repeat(3, 20%);
+  }
+  .article-1 {
+    grid-column: 1/4;
+    order: 1;
+  }
+  .blue-building {
+    grid-column: 4;
+    order: 2;
+  }
+  .sub-heading {
+    margin-block: 2rem;
+    align-self: center;
+    grid-column: 1/ 5;
+    grid-row: 2;
+    order: 3;
+  }
+  .article-2 {
+    align-self: start;
+    grid-row: 3;
+    grid-column: 2/5;
+    order: 4;
+  }
+  .article-2 h2 {
+    text-align: left;
+  }
+  .vision-arrow {
+    grid-row: 3;
+    grid-column: 1;
+    display: block;
+    order: 5;
+    margin-left: 10%;
+  }
+  .vision-no-arrow {
+    display: none;
+  }
+  .article-3 {
+    align-self: start;
+    grid-row: 4;
+    grid-column: 1/4;
+    order: 6;
+  }
+  .article-3 h2 {
+    text-align: right;
+  }
 
-    .about-us-main-section .container  .vision img{
-        width: 100%;
-        
-        overflow:hidden;
-        padding-left: 1rem;
-        padding-right: 1.3rem;
-        
-
-        
-    }
-    .about-us-main-section .container  .mission{
-        display: flex;
-        
-    }
-    .about-us-main-section .container  .mission img{
-        width: 300%;
-        
-        overflow:hidden;
-        
-        
-        
-    }
-
-    .about-us-main-section .container  .mission img{
-        content:url('/static/assests/imgs/mission\ for\ smaller\ screens.svg');
-    }
-    .about-us-main-section .container .vision img{
-        content: url('/static/assests/imgs/vision\ for\ smaller\ screens.svg');
-    }
-    .about-us-main-section .container .vision{
-        width: 100%;
-    }
+  .mission-arrow {
+    grid-row: 4;
+    grid-column: 4;
+    display: block;
+    order: 7;
+    margin-left: 10%;
+  }
+  .mission-no-arrow {
+    display: none;
+  }
 }
 /* about us main section end*/
