--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,21 +2,19 @@
 html {
   scroll-behavior: smooth;
 }
-#company-introduction{
+#company-introduction {
   text-decoration: none;
   color: black;
 }
-#team{
+#team {
   text-decoration: none;
   color: black;
 }
-#Problems
-{
+#Problems {
   text-decoration: none;
   color: black;
 }
-#Services
-{
+#Services {
   text-decoration: none;
   color: black;
 }
@@ -35,10 +33,10 @@ html {
 body {
   font-family: "Roboto", sans-serif;
 }
-@media screen and (max-width:800px){
-    body.no-scroll{
-        overflow-y: hidden;
-    }
+@media screen and (max-width: 800px) {
+  body.no-scroll {
+    overflow-y: hidden;
+  }
 }
 /* Navbar start */
 nav {
@@ -126,14 +124,11 @@ nav .hamburger-btn div {
   position: relative;
   transition: transform 1s, bottom 1s, opacity 1s;
 }
-
 nav .hamburger-btn.open div {
-  /* background-color: black; */
   width: 2rem;
 }
 nav .hamburger-btn.open div:nth-of-type(1) {
   transform: rotate(-45deg);
-  /* left:-3px; */
   top: 7px;
 }
 nav .hamburger-btn.open div:nth-of-type(2) {
@@ -141,7 +136,6 @@ nav .hamburger-btn.open div:nth-of-type(2) {
 }
 nav .hamburger-btn.open div:nth-of-type(3) {
   transform: rotate(45deg);
-  /* left:-3px; */
   bottom: 7px;
 }
 @media screen and (max-width: 800px) {
@@ -170,7 +164,6 @@ nav .hamburger-btn.open div:nth-of-type(3) {
     transition: visibility 1s, opacity 0.5s, gap 1s;
   }
   nav .links.open {
-    /* transform:scale(1); */
     visibility: visible;
     opacity: 1;
     border-radius: 0;
@@ -272,12 +265,13 @@ nav .hamburger-btn.open div:nth-of-type(3) {
 }
 
 /* Hero section end */
-
+main {
+  padding-block: 5rem;
+}
 /* Home page main section start */
 .home-main-section {
   padding-left: 8%;
   padding-right: 12%;
-  padding-block: 5rem;
 }
 .home-main-section h3 {
   margin-bottom: 2.5rem;
