--- a/static/css/values.css
+++ b/static/css/values.css
@@ -1,16 +1,9 @@
-.Values-main-section{
-    display: block;
-}
 
 .Values-main-section .pic{
-    
-    
-    resize: both;
-    overflow: auto;
-    padding: 5rem;
-
+    width:95%;
+    margin:auto;
 }
+
 .Values-main-section .pic img{
-    width: 95%;
- height: 95%;
+    width: 100%;
 }
